# mini_dialyzer

./: Makefile  README.md  mini_dialyzer.opam
src/: jbuild  judgement.ml  mini_dialyzer.ml  solution.ml  types.ml
